--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,37 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+:root{
+  --twitter-color:#50b7f5;
+  --twitter-background:#e6ecf0;
+  --div:white;
+  --color:black;
+  --shadow:rgba(0, 0, 0, 0.452);
+  --follow:#50b7f5;
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
 }
+.dark-theme{
+  --twitter-color:#50b7f5;
+  --twitter-background:#252627;
+  --div:black;
+  --color:white;
+  --shadow:rgba(255, 255, 255, 0.452);
+  --follow: white;
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+}
+.app{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: 100vh;
+  max-width: 1300px;
+  margin-left: auto;
+  margin-right: auto;
+  padding:0px 20px;
+  color: var(--color);
+  
 }
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body{
+  background-color: var(--div);
 }
